# simple_workspaces

./: .env  Cargo.toml  README.md  docker-compose.yml  simple_workspaces.postman_collection.json
docker/postgres/: initdb.sql
migrations/: 01_create_workspace_table.sql  02_add_initial_data.sql
src/: db.rs  handler.rs  main.rs  models.rs  repository.rs  schema.rs
src/models/: user.rs  workspace.rs  workspace_status_master.rs
