[package]
name = "simple_workspaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "~0.7.1" } # Web framework that focuses on ergonomics and modularity.
tokio = { version = "~1.34.0", features = ["full"] } # Event-driven, non-blocking I/O platform.
serde = { version = "~1.0.193", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "~1.0.108" } # Serde serializion/deserialization of JSON data.
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono"] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-trait = "0.1.79"
